# Mocker

./: .env.example  .gitignore  ARCHITECTURE.md  DOCKER_DEPLOYMENT.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  init.sql  pyproject.toml
backend/: .dockerignore  Dockerfile  Dockerfile.dev  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 7015c4db4275_initial_migration.py  9d6468db43a7_initial_migration.py  ce1ba19a5322_add_categories_table.py
backend/app/: main.py
backend/app/api/: api.py  deps.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  base.py  category.py  log.py  mock.py
backend/app/schemas/: __init__.py  category.py  dashboard.py  log.py  mock.py
backend/app/services/: __init__.py  category_service.py  dashboard_service.py  log_service.py  mock_service.py
backend/app/utils/: __init__.py  response_generator.py
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  start_simple.html  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: categories.ts  client.ts  logs.ts  mocks.ts
frontend/src/composables/: useCategories.ts  useLogs.ts  useMocks.ts  useToast.ts
frontend/src/router/: index.ts
frontend/src/styles/: main.css
frontend/src/types/: api.ts  category.ts  log.ts  mock.ts
frontend/src/views/: LogList.vue  MockDetail.vue  MockForm.vue  NotFound.vue  SimpleDashboard.vue  SimpleMockList.vue  TestPage.vue  (+1 more)
scripts/: check-deployment.sh  quick-deploy.sh
(+20 files in other folders)
